# greentic-telemetry

./: .gitignore  Cargo.toml  README.md  SECURITY_FIX_REPORT.md  SEMVER_FIX_REPORT.md  pr-changed-files.txt  pr-comment.md  semver-output.txt
.codex/: global_rules.md  repo_overview.md
.github/workflows/: ci-aws-telemetry.yml  ci-azure-telemetry.yml  ci-gcp-telemetry.yml  ci.yml  codex-security-fix.yml  codex-semver-fix.yml  crates-publish.yml  dependabot-automerge.yml  dev-publish.yml  nightly-semver.yml  release.yml  weekly-stable-publish.yml
ci/: local_check.sh
docs/: otlp-backends.md
examples/: task_local.rs
src/: aws_sigv4_client.rs  export.rs  init.rs  lib.rs  operation_subs.rs  provider.rs  redaction.rs  secrets.rs  wasm_guest.rs
src/presets/: honeycomb.rs  mod.rs
tests/: azure_direct_smoke.rs  emit_cloud.rs  operation_subs_pipeline.rs  otlp_smoke.rs  pack_validation.rs  qa_lifecycle.rs  secrets_redaction.rs
wit/: greentic-telemetry.wit
