[package]
name = "greentic-telemetry"
version = "0.4.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-telemetry"
homepage = "https://greentic.ai"
documentation = "https://docs.rs/greentic-telemetry"
description = "Thin telemetry facade for Greentic: tracing/logging/metrics with OTLP + WASM."
readme = "README.md"
keywords = ["telemetry", "tracing", "opentelemetry", "otlp", "wasm"]
categories = ["development-tools","visualization","wasm"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["otlp"]
fmt = ["tracing-subscriber/fmt"]
otlp = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
]
dev = []
prod-json = []
dev-console = ["console-subscriber"]
json-stdout = []
otlp-grpc = []
otlp-http = []

[dependencies]
anyhow = "1"
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
tracing-error = "0.2"
tracing-appender = "0.2"
atty = "0.2"
opentelemetry = { version = "0.31", features = ["trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
console-subscriber = { version = "0.5", optional = true }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
