[package]
name = "greentic-telemetry"
version = "0.4.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/greenticai/greentic-telemetry"
homepage = "https://greentic.ai"
documentation = "https://docs.rs/greentic-telemetry"
description = "Thin telemetry facade for Greentic: tracing/logging/metrics with OTLP + WASM."
readme = "README.md"
keywords = ["telemetry", "tracing", "opentelemetry", "otlp", "wasm"]
categories = ["development-tools","visualization","wasm"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["otlp"]
fmt = ["tracing-subscriber/fmt"]
otlp = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
]
dev = []
prod-json = []
dev-console = ["console-subscriber"]
json-stdout = []
otlp-grpc = []
otlp-http = []
payload-hash = ["blake3"]
azure = [
    "opentelemetry",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "dep:opentelemetry-application-insights",
    "dep:opentelemetry-http",
    "dep:reqwest",
]
aws = [
    "otlp",
    "dep:opentelemetry-aws",
    "dep:async-trait",
    "dep:aws-config",
    "dep:aws-sigv4",
    "dep:aws-credential-types",
    "dep:aws-smithy-runtime-api",
    "dep:opentelemetry-http",
    "dep:reqwest",
    "dep:bytes",
    "dep:http",
]
gcp = [
    "opentelemetry",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "dep:opentelemetry-gcloud-trace",
    "dep:rustls",
]

[dependencies]
anyhow = "1"
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
tracing-error = "0.2"
tracing-appender = "0.2"
opentelemetry = { version = "0.31", features = ["trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
console-subscriber = { version = "0.5", optional = true }
blake3 = { version = "1", optional = true }
opentelemetry-application-insights = { version = "0.44", default-features = false, features = ["trace", "metrics"], optional = true }
opentelemetry-http = { version = "0.31", features = ["reqwest"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
opentelemetry-aws = { version = "0.19", default-features = false, features = ["trace"], optional = true }
opentelemetry-gcloud-trace = { version = "0.22", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring"], optional = true }
async-trait = { version = "0.1", optional = true }
aws-config = { version = "1", optional = true }
aws-sigv4 = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }
aws-smithy-runtime-api = { version = "1", features = ["client"], optional = true }
bytes = { version = "1", optional = true }
http = { version = "1", optional = true }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }

