[package]
name = "greentic-telemetry"
version = "1.1.0-dev.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/greenticai/greentic-telemetry"
homepage = "https://greentic.ai"
documentation = "https://docs.rs/greentic-telemetry"
description = "Thin telemetry facade for Greentic: tracing/logging/metrics with OTLP + WASM."
readme = "README.md"
keywords = [
    "telemetry",
    "tracing",
    "opentelemetry",
    "otlp",
    "wasm",
]
categories = [
    "development-tools",
    "visualization",
    "wasm",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = [
    "otlp",
]
fmt = [
    "tracing-subscriber/fmt",
]
otlp = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
]
dev = ["dep:tracing-appender"]
prod-json = []
# WIT guest bridge: pulls in wit-bindgen and generates `greentic:telemetry/logging`
# import bindings used by src/wasm_guest.rs. Only meaningful on wasm32; off by
# default so a plain `--no-default-features` wasm build needs no wit-bindgen.
wit-guest = ["dep:wit-bindgen"]
dev-console = [
    "console-subscriber",
]
json-stdout = []
otlp-grpc = []
otlp-http = []
payload-hash = [
    "blake3",
]
azure = [
    "opentelemetry",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "dep:opentelemetry-application-insights",
    "dep:opentelemetry-http",
    "dep:reqwest",
]
aws = [
    "otlp",
    "dep:opentelemetry-aws",
    "dep:async-trait",
    "dep:aws-config",
    "dep:aws-sigv4",
    "dep:aws-credential-types",
    "dep:aws-smithy-runtime-api",
    "dep:opentelemetry-http",
    "dep:reqwest",
    "dep:bytes",
    "dep:http",
]
gcp = [
    "opentelemetry",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "dep:opentelemetry-gcloud-trace",
    "dep:rustls",
]

[dependencies]
anyhow = "1"
once_cell = "1"
tracing = "0.1"
tracing-error = "0.2"
# tracing-appender is `dev`-only (rolling-file logger) and not wasm-compatible — keep it optional.
tracing-appender = { version = "0.2", optional = true }
serde_json = "1"
thiserror = "2"

# Native: the cloud exporters in src/init.rs leak a multi-thread runtime to drain batch exports.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

# wasm32: no OS threads → no `rt-multi-thread`/`net`; just enough for the task_local in src/tasklocal.rs.
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
# Enabled by the `wit-guest` feature — generates the host-bridge bindings in src/wasm_guest.rs.
wit-bindgen = { version = "0.57", optional = true }

[dependencies.tracing-subscriber]
version = "0.3"
features = [
    "env-filter",
    "fmt",
    "json",
    "registry",
]

[dependencies.opentelemetry]
version = "0.31"
features = [
    "trace",
    "metrics",
]
optional = true

[dependencies.opentelemetry-otlp]
version = "0.31"
features = [
    "grpc-tonic",
    "http-proto",
    "metrics",
]
optional = true

[dependencies.opentelemetry_sdk]
version = "0.31"
features = [
    "rt-tokio",
    "metrics",
]
optional = true

[dependencies.tracing-opentelemetry]
version = "0.32"
optional = true

[dependencies.serde]
version = "1"
features = [
    "derive",
]

[dependencies.console-subscriber]
version = "0.5"
optional = true

[dependencies.blake3]
version = "1"
optional = true

[dependencies.opentelemetry-application-insights]
version = "0.44"
default-features = false
features = [
    "trace",
    "metrics",
]
optional = true

[dependencies.opentelemetry-http]
version = "0.31"
features = [
    "reqwest",
]
optional = true

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [
    "rustls-tls",
]
optional = true

[dependencies.opentelemetry-aws]
version = "0.19"
default-features = false
features = [
    "trace",
]
optional = true

[dependencies.opentelemetry-gcloud-trace]
version = "0.23"
optional = true

[dependencies.rustls]
version = "0.23"
default-features = false
features = [
    "ring",
]
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.aws-config]
version = "1"
optional = true

[dependencies.aws-sigv4]
version = "1"
optional = true

[dependencies.aws-credential-types]
version = "1"
optional = true

[dependencies.aws-smithy-runtime-api]
version = "1"
features = [
    "client",
]
optional = true

[dependencies.bytes]
version = "1"
optional = true

[dependencies.http]
version = "1"
optional = true

[dev-dependencies.uuid]
version = "1"
features = [
    "v4",
]
